Fix build - Add content

--- a/config.toml
+++ b/config.toml
@@ -53,3 +53,7 @@ identifier = "posts"
 name       = "Posts"
 url        = "/posts"
 
+[[menu.main]]
+identifier = "about"
+name       = "About"
+url        = "/about"
